@@ -93,6 +93,7 @@ The Jacl and Tcl Blend releases are brought to you by:
 
  Mo DeJong
  Christopher Hylands
+ Scott Redman
  Bryan Surles
 
 We would like to thank the Jacl and Tcl Blend 1.0 team:
